--- a/Adatvedelem.html
+++ b/Adatvedelem.html
@@ -87,11 +87,11 @@
   <br><br>
 
   <p><strong>Lóránt Demény</strong><br>
-    Vezérigazgató [cite: 46]<br>
+    Vezérigazgató <br>
     <a href="mailto:lorantd@televoxsa.ro">office@televoxsa.ro</a><br>
     Tel/Fax: 0265-267.619<br>
     Gheorghe Doja utca 101.<br>
-    Marosvásárhely 540394 [cite: 5]
+    Marosvásárhely 540394 
   </p>
     </div>
   
@@ -103,4 +103,5 @@
     <p>© 2025 Televox | Email: office@televoxsa.ro | Tel: +4044160790</p>
   </footer>
 </body>
+
 </html>
