--- a/Termenisiconditii.html
+++ b/Termenisiconditii.html
@@ -32,8 +32,8 @@
   <p><strong>Datele oficiale ale furnizorului:</strong></p>
 
   <ul>
-    <li><strong>Denumire firmă:</strong> S.C. TELEVOX S.A. [cite: 1]</li>
-    <li><strong>Sediul social:</strong> Tg. Mureș, str. Gheorghe Doja nr. 101 [cite: 5]</li>
+    <li><strong>Denumire firmă:</strong> S.C. TELEVOX S.A. </li>
+    <li><strong>Sediul social:</strong> Tg. Mureș, str. Gheorghe Doja nr. 101 </li>
     <li><strong>Nr. Reg. Com.:</strong> J26-1427/1994</li>
     <li><strong>Cod Fiscal (CUI):</strong> RO6753253</li>
     <li><strong>Capital social:</strong> 120.200 RON, integral privat [cite: 4]</li>
@@ -80,11 +80,11 @@
   <br><br>
 
   <p><strong>Lóránt Demény</strong><br>
-    Director General [cite: 46]<br>
+    Director General <br>
     <a href="mailto:office@televoxsa.ro">office@televoxsa.ro</a><br>
     Tel/Fax: 0265-267.619<br>
     Str. Gheorghe Doja nr. 101<br>
-    Tg. Mureș 540394 [cite: 5]
+    Tg. Mureș 540394 
   </p>
     </div>
   
