--- a/Felhasznalasifeltetelek.html
+++ b/Felhasznalasifeltetelek.html
@@ -32,8 +32,8 @@
   <p><strong>A szolgáltató hivatalos adatai:</strong></p>
 
   <ul>
-    <li><strong>Cégnév:</strong> S.C. TELEVOX S.A. [cite: 1]</li>
-    <li><strong>Székhely:</strong> Marosvásárhely, Gheorghe Doja utca 101. [cite: 5]</li>
+    <li><strong>Cégnév:</strong> S.C. TELEVOX S.A. </li>
+    <li><strong>Székhely:</strong> Marosvásárhely, Gheorghe Doja utca 101. </li>
     <li><strong>Cégjegyzékszám:</strong> J26-1427/1994</li>
     <li><strong>Adószám (CUI):</strong> RO6753253</li>
     <li><strong>Alaptőke:</strong> 120.200 RON, integral privat [cite: 4]</li>
@@ -80,11 +80,11 @@
   <br><br>
 
   <p><strong>Lóránt Demény</strong><br>
-    Vezérigazgató [cite: 46]<br>
+    Vezérigazgató <br>
     <a href="mailto:lorantd@televoxsa.ro">office@televoxsa.ro</a><br>
     Tel/Fax: 0265-267.619<br>
     Gheorghe Doja utca 101.<br>
-    Marosvásárhely 540394 [cite: 5]
+    Marosvásárhely 540394 
   </p>
     </div>
   
