--- a/Politicadeconfidentialitate.html
+++ b/Politicadeconfidentialitate.html
@@ -35,9 +35,9 @@
   <ul>
     <li><strong>Denumire firmă:</strong> S.C. TELEVOX S.A.</li>
     <li><strong>Sediul social:</strong> Tg. Mureș, str. Gheorghe Doja nr. 101</li>
-    <li><strong>Nr. Reg. Com.:</strong> J26-1427/1994 [cite: 1]</li>
-    <li><strong>Cod Fiscal (CUI):</strong> RO6753253 [cite: 1]</li>
-    <li><strong>E-mail:</strong> office@televoxsa.ro [cite: 1]</li>
+    <li><strong>Nr. Reg. Com.:</strong> J26-1427/1994 </li>
+    <li><strong>Cod Fiscal (CUI):</strong> RO6753253 </li>
+    <li><strong>E-mail:</strong> office@televoxsa.ro </li>
   </ul>
 
   <h3>Categoriile de date colectate și scopul prelucrării</h3>
@@ -87,11 +87,11 @@
   <br><br>
 
   <p><strong>Lóránt Demény</strong><br>
-    Director General [cite: 46]<br>
-    <a href="mailto:lorantd@televoxsa.ro">office@televoxsa.ro</a> [cite: 1]<br>
-    Tel/Fax: 0265-267.619 [cite: 1]<br>
-    Str. Gheorghe Doja nr. 101 [cite: 5]<br>
-    Tg. Mureș 540394 [cite: 1]
+    Director General <br>
+    <a href="mailto:lorantd@televoxsa.ro">office@televoxsa.ro</a> <br>
+    Tel/Fax: 0265-267.619 <br>
+    Str. Gheorghe Doja nr. 101 <br>
+    Tg. Mureș 540394 
   </p>
     </div>
   
