--- a/Politicadeconfidentialitate.html
+++ b/Politicadeconfidentialitate.html
@@ -92,6 +92,7 @@
     Tel/Fax: 0265-267.619 <br>
     Str. Gheorghe Doja nr. 101 <br>
     Tg. Mureș 540394 
+    SZIA
   </p>
     </div>
   
@@ -104,3 +105,4 @@
   </footer>
 </body>
 </html>
+
