--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 
     <h3 >Experiență și Profesionalism</h3>
     
-    <p>Temelia succesului nostru o constituie experiența vastă a echipei noastre. În domeniul <strong>automatizărilor industriale</strong>, specialiștii noștri beneficiază de o experiență de peste 15 ani, acumulată inițial la Institutul de Cercetări și Proiectări Electronice (ICPE) București – Filiala Tg. Mureș. Această expertiză ne-a permis să realizăm dezvoltări și invenții proprii, inclusiv:</p>
-    <ul style="background-color: #f9f9f9; padding: 15px 20px; border-left: 4px solid #2980b9; list-style-type: none;">
+   <p>
+        Temelia succesului nostru o constituie experiența vastă și diversificată a echipei noastre. De-a lungul anilor, ne-am consolidat expertiza în domenii tehnice complexe, oferind soluții integrate pentru <strong>telecomunicații, instalații electrice, sisteme de securitate și IT</strong>. 
+    </p>
+		<ul style="background-color: #f9f9f9; padding: 15px 20px; border-left: 4px solid #2980b9; list-style-type: none;">
         <li style="margin-bottom: 10px;">✓ Optimizări energetice și sisteme complexe pentru cuptoare cu arc electric;</li>
         <li style="margin-bottom: 10px;">✓ Sisteme avansate de reglaj (temperatură, viteză, presiune, debit);</li>
         <li>✓ Convertizoare statice de frecvență pentru motoare asincrone de mare putere (până la 1MW).</li>
@@ -269,4 +271,5 @@
     })();
     </script>
 </body>
+
 </html>
