--- a/TeleVoxE.html
+++ b/TeleVoxE.html
@@ -45,8 +45,10 @@
 
     <h3 >Experience and Professionalism</h3>
     
-    <p>The foundation of our success is the vast experience of our team. In the field of <strong>industrial automation</strong>, our specialists benefit from over 15 years of experience, initially accumulated at the Research and Design Institute for Electrical Engineering (ICPE) Bucharest – Tg. Mureș Branch[cite: 18]. This expertise has allowed us to realize our own developments and inventions, including:</p>
-    <ul style="background-color: #f9f9f9; padding: 15px 20px; border-left: 4px solid #2980b9; list-style-type: none;">
+   <p>
+    The foundation of our success lies in the vast and diverse experience of our team. Over the years, we have consolidated our expertise in complex technical fields, providing integrated solutions for <strong>telecommunications, electrical installations, security systems, and IT</strong>.
+</p>
+		<ul style="background-color: #f9f9f9; padding: 15px 20px; border-left: 4px solid #2980b9; list-style-type: none;">
         <li style="margin-bottom: 10px;">✓ Energy optimizations and complex systems for electric arc furnaces[cite: 20];</li>
         <li style="margin-bottom: 10px;">✓ Advanced regulation systems (temperature, speed, pressure, flow)[cite: 21];</li>
         <li>✓ Static frequency converters for high-power asynchronous motors (up to 1MW)[cite: 22].</li>
@@ -241,3 +243,4 @@
 </script>
 </body>
 </html>
+
