--- a/TeleVoxM.html
+++ b/TeleVoxM.html
@@ -45,8 +45,10 @@
 
     <h3 >Tapasztalat és Professzionalizmus</h3>
     
-    <p>Sikerünk alapját csapatunk széles körű tapasztalata képezi. Az <strong>ipari automatizálás</strong> területén szakembereink több mint 15 éves tapasztalattal rendelkeznek, amelyet kezdetben a Bukaresti Elektrotechnikai Kutató és Tervező Intézet (ICPE) – Marosvásárhelyi Fiókjánál szereztek. Ez a szakértelem lehetővé tette számunkra saját fejlesztések és találmányok megvalósítását, beleértve:</p>
-    <ul style="background-color: #f9f9f9; padding: 15px 20px; border-left: 4px solid #2980b9; list-style-type: none;">
+    <p>
+    Sikerünk alapját csapatunk széles körű és sokrétű tapasztalata képezi. Az évek során megerősítettük szakértelmünket a komplex műszaki területeken, integrált megoldásokat kínálva a <strong>távközlés, elektromos hálózatok, biztonságtechnikai rendszerek és az IT</strong> területén.
+</p>
+		<ul style="background-color: #f9f9f9; padding: 15px 20px; border-left: 4px solid #2980b9; list-style-type: none;">
         <li style="margin-bottom: 10px;">✓ Energetikai optimalizálások és komplex rendszerek elektromos ívkemencékhez;</li>
         <li style="margin-bottom: 10px;">✓ Fejlett szabályozó rendszerek (hőmérséklet, sebesség, nyomás, áramlás);</li>
         <li>✓ Statikus frekvenciaváltók nagy teljesítményű aszinkron motorokhoz (1 MW-ig).</li>
@@ -224,3 +226,4 @@ toggle.setAttribute('aria-expanded', 'false');
 
 </body>
 </html>
+
